# H563ZI_test

./: .mxproject  CMakeLists.txt  H563ZI_test.ioc  Makefile  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld
Core/Inc/: app_freertos.h  linked_list.h  main.h  serial_link.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: app_freertos.c  linked_list.c  main.c  serial_link.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
doc/: Nucleo-H563ZI morpho.xlsx
